add font awesome functionality and initialize semantic tookbox jquery library on load of page within component storytile for accordion

--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -1,4 +1,4 @@
-<h1>Bustle</h1>
+{{!-- <h1>Bustle</h1>
 
 <ul>
   {{#each model as |story|}}
@@ -6,4 +6,6 @@
   {{/each}}
 </ul>
 
-{{story-new saveStory="saveStory"}}
+{{story-new saveStory="saveStory"}} --}}
+
+{{story-tile}}
